[package]
name = "fendbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
fend-core = "1.5.3"
futures = "0.3.30"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking", "cookies"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "rt"] }
